Committing files to this repository since apparantly I was doing it in the wrong place

--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
-<p>Glynnis Thomas</p>
+<!DOCTYPE html>
+
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <link type="text/css" rel="stylesheet" href="styles.css" />
+        <title>HTML Me Something Webpage</title>
+    </head>
+
+    <body>
+        <header>
+            <h1>Tasty Things to Try!</h1>
+        </header>
+
+        <div class="nav">
+            <nav>
+                <ul>
+                    <h3>Recipe Sites</h3>
+                    <li><a href="http://allrecipes.com/" alt="text">Allrecipes</a></li>
+                    <li><a href="http://www.foodnetwork.com/" alt="text">Food Network</a></li>
+                    <li><a href="http://www.bettycrocker.com/recipes" alt="text">Betty Crocker</a></li>
+                    <li><a href="http://www.joyofbaking.com/" alt="text">The Joy of Baking</a></li>
+                    <h3>Just for Fun</h3>
+                    <li><a href="http://theoatmeal.com/comics/tesla" alt="text">Tesla from The Oatmeal</a></li>
+                    <li><a href="http://hyperboleandahalf.blogspot.com/" alt="text">Hyperbole and a Half</a></li>
+                    <li><a href="http://icanhas.cheezburger.com/lolcats" alt="text">LOLCats</a></li>
+                    <li><a href="https://textfac.es/" alt="text">textfac.es</a></li>
+
+                </ul>
+            </nav>
+        </div>
+
+        <main>
+            <article class="body">
+
+
+                    <p id="first-p">In addition to coding, reading and various crafts, I also enjoy cooking. What follows are a couple of recipes that I have found particularly enjoyable.</p>
+
+                    <h3>Appetizer</h3>
+                    <img src="images/HotCheesySpinachArtichokeDip-3.jpg" alt="Baked Spinach Artichoke Dip" class="img"/>
+                    <h4>Baked Spinach and Artichoke Dip</h4>
+
+                    <ul>
+                        <li>2c. Parmesan Cheese</li>
+                        <li>1 box Frozen Chopped Spinach, thawed</li>
+                        <li>1 (14oz) can/jar of Artichoke Hearts, drained and chopped</li>
+                        <li>2/3c. Sour Cream</li>
+                        <li>1c. Cream Cheese</li>
+                        <li>1/3c. Mayonnaise</li>
+                        <li>2tsp. Garlic, minced</li>
+                        <li>1tsp. Smoked Paprika</li>
+                        <li>1/4c. Breadcrumbs</li>
+                        <li>1T. of Parmesan Cheese</li>
+                    </ul>
+                    <p>Preheat oven to 375&deg;. Mix together the parmesan spinach and artichokes. Blend the sour cream, cream cheese, mayonnaise, garlic and paprika,  and then combine with the spinach and artichoke mixture. Spread into a greased baking dish. In a small dish stir together the breadcrumbs and remaining parmesan cheese, and sprinkle the mixture over the top. Bake for 20-30 minutes, serve with toasted pita wedges or your favorite cracker. Yields 4 cups.</p>
+
+                    <h3>Soup</h3>
+                    <h4>Shorba (A Middle Eastern Lentil Soup)</h4>
+                    <img src="images/shorba.jpg" alt="A bowl of Shorba" class="img" />
+                    <ul>
+                        <li>1 1/4c. Split Red Lentils</li>
+                        <li>1/2c. Onions, chopped</li>
+                        <li>1/2c. Celery, chopped</li>
+                        <li>1/2c. Carrots, chopped</li>
+                        <li>2 Garlic Cloves, minced</li>
+                        <li>1T Olive Oil</li>
+                        <li>4c. Chicken Stock</li>
+                        <li>2c. Water</li>
+                        <li>1 Bay Leaf</li>
+                        <li>1/2tsp. Cumin</li>
+                        <li>1/4 tsp. Tumeric</li>
+                        <li>Juice of 1 Lemon</li>
+                        <li>2tsp. Kosher Salt</li>
+                        <li>1/2tsp. Black Pepper, freshly ground if possible</li>
+                    </ul>
+                    <br>
+                    <p>Rinse and soak the lentils for 15-20 minutes, then drain. Heat the oil in a large pot over medium heat, and cook the onions, celery and carrots for 7-10 minutes - or until slightly translucent. Add the garlic and cook for another minute. Add the bay leaf, cumin and tumeric, stir until combined, then add the lentils, chicken stock and water. Cook for an additional 15-20 minutes or until the lentils have softened. Remove the bay leaf.</p>
+                    <p>Optional - use a traditional or immersion blender to render the soup to your desired consistency (I like it blended together pretty well, it's much smoother. Note - it will expand when you blend it, so if using a traditional blender <strong>do not</strong> fill it all the way up.)</p>
+                    <p>Add the lemon juice, season with salt and pepper to taste. Serves 6.</p>
+
+                    <h3>Entree&#769;</h3>
+                    <h4>Roasted Chicked and Vegetables</h4>
+                    <img src="images/roasted chicken.jpg" alt="A Roasted Chicken" class="img" />
+                    <h5>For Butter:</h5>
+                    <ul>
+                        <li>6T. Unsalted Butter, at room temperature</li>
+                        <li>2tsp. Fresh Rosemary, chopped</li>
+                        <li>2tsp. Fresh Thyme, chopped</li>
+                        <li>1/2tsp. Lemon Juice</li>
+                        <li>1/2tsp Kosher Salt</li>
+                        <li>1/2tsp. Black Pepper, freshly ground if possible</li>
+                        <li>3 Large Cloves Garlic, minced</li>
+                    </ul>
+                    <h5>For Chicken:</h5>
+                    <ul>
+                        <li>One 6 1/2lb Chicken, rinsed and patted dry</li>
+                        <li>Kosher Salt and Black Pepper, freshly ground if possible</li>
+                        <li>5 Sprigs Fresh Rosemary</li>
+                        <li>5 Sprigs Fresh Thyme</li>
+                        <li>1 Lemon, quartered</li>
+                    </ul>
+                    <h5>For Vegetables:</h5>
+                    <ul>
+                        <li>3T. EVOO</li>
+                        <li>1tsp Fresh Rosemary, chopped</li>
+                        <li>1tsp Fresh Thyme, chopped</li>
+                        <li>1tsp. Kosher Salt, plus more for seasoning</li>
+                        <li>1/2tsp. Black Pepper, freshly ground if possible, plus more for seasoning</li>
+                        <li>6 Red Potatoes, quartered</li>
+                        <li>4 Medium Carrots, peeled and halved lengthwise</li>
+                        <li>2 Large Parsnips, peeled and halved lengthwise</li>
+                        <li>2 Large Shallots, peeled and halved</li>
+                        <li>2 Cloves Garlic, peeled</li>
+                        <li>1/2c. Chicken Broth</li>
+                    </ul>
+                    <p>Place your oven rack just below center, then preheat to 400&deg;.</p>
+                    <p>For the butter: Blend all ingredients until smooth.</p>
+                    <p>For the chicken: Tuck the wings under the chicken. Sprinkle the cavity with salt and pepper, then add 2 T of the butter mixture. Place the rosemary, thyme and lemon quarters into the cavity and tie the legs loosely together with kitchen string. Place in a large roasting pan. Starting at the neck, loosen the skin of the entire chicken, and spread the remaining butter mixture over the outside and under the skin of the entire chicken, being careful not to tear the skin.</p>
+                    <p>For the Vegetables: Toss all ingredients, except the broth, together in a large bowl. Arrange them around the chicken in a single layer, then add the broth.</p>
+                    <p>Roast until the vegetables are tender and the chicken has reached an internal temperature of 160-165&deg;, which should be about 1 1/2 hours. Let rest for 20 minutes before carving.</p>
+
+                    <h3>Dessert</h3>
+                    <h4>Red Velvet Cake with Cream Cheese Frosting</h4>
+                    <img src="images/red velvet cake.jpg" alt="Red Velvet Cake" class="img" />
+                    <h5>For Cake:</h5>
+                    <ul>
+                        <li>2 1/2c. Cake Flour</li>
+                        <li>1/2tsp. Salt</li>
+                        <li>2T Cocoa Powder</li>
+                        <li>1/2c. Unsalted Butter, at room temperature</li>
+                        <li>1 1/2c. Granulated White Sugar</li>
+                        <li>2 Large Eggs</li>
+                        <li>1tsp. Pure Vanilla Extract</li>
+                        <li>1c. Buttermilk</li>
+                        <li>2T Liquid Red Food Coloring</li>
+                        <li>1tsp. White Distilled Vinegar</li>
+                        <li>1tsp. Baking Soda</li>
+                    </ul>
+                    <h5>For Frosting:</h5>
+                    <ul>
+                        <li>1 8oz. pkg. of Cream Cheese</li>
+                        <li>1 8oz. container of Mascarpone Cheese</li>
+                        <li>1tsp. Pure Vanilla Extract</li>
+                        <li>1c. Confectioners' Sugar, sifted</li>
+                        <li>1 1/2c. Heavy Whipping Cream or Double Cream (35-40% butterfat), very cold</li>
+                    </ul>
+                    <p>For the Cake: Place your oven rack just below center, then preheat to 350deg. Grease two 9-in round cake pans and line the bottoms with parchment paper.</p>
+                    <p>In a mixing bowl sift together the flour, salt and cocoa powder, set aside. In your electric mixer (or other mixing bowl if mixing by hand) beat the butter until soft and then cream in the sugar until light and fluffy. Add the eggs one at a time, beating well after each one. Scrape down the sides of the bowl and add the vanilla - beat until combined.</p>
+                    <p>In a measuring cup whish the buttermilk with the red food coloring. Starting with the flour alternate adding the flour mixture and the buttermilk mixture to the batter. Use three additions, and end with the last of the flour.</p>
+                    <p>In a small cup, combine the vinegar and baking soda. Allow it to fizz and then quickly fold into the cake batter.</p>
+                    <p>Working quickly, before the bubbles forming in the batter have dissipated, divide the batter evenly between the two pans you prepared and smooth down the tops. Bake for 25-30 minutes or until a toothpick inserted into the center comes out clean. Cool the cakes in their pans on a wire rack for 10 minutes, then, using the wire rack, invert the cakes and remove the pans. Once they are completely cooled, wrap in plastic and refrigerate overnight.</p>
+                    <p>For the Frosting: In your electric mixer beat the cream cheese and mascarpone cheese until smooth. Add the vanilla and confectioners' sugar and beat until smooth again. Using the whisk attachment gradually add the heavy cream until it is thick enough to spread. Add more sugar or cream as needed to get the correct consistency.</p>
+                    <p><em>Note: You must use cream that whips easily to stiff peaks. If yours does not, whip it to stiff peaks separately then fold it into the cheese mixture.</em></p>
+                    <p>To Assemble: Using a serrated knife, cut each layer in half lengthwise so you end up with 4 rounds. You may cut the tops off the cakes to make them even if desired, it is recommended as it will make it easier to assemble. Starting with Your first cake round cut side down on your cake platter, spread frosting across the entire layer, and then add another round on top. Repeat with all rounds, then frost the top and sides. Garnish with crumbs from cut cake or toasted coconut. Serves 10-12.</p>
+                    <img src="images/cat-pushing-watermelon_thumb.jpg" alt="A cat pushing a watermelon out of a lake. No, really." id="image1" />
+                    <br>
+                    <br>
+                    <p>I've always really enjoyed cooking for my family and friends, but I've never considered it as a career since my father is a chef - the hours are terrible. &#9787;</p>
+                    <p>I've made all the above recipes, and can recommend them all. The dip is awesome for parties and travels well if you need to take it somewhere, the soup is great for a cold day, the chicken is excellent for a dinner party or a night in, and the cake is my personal favorite.</p>
+                    <p>Also, this picture is awesome.</p>
+                    <p>Feel free to use the contact me button in the footer to email me with any questions. Thanks!</p>
+
+            </article>
+        </main>
+
+        <div class="footer">
+            <footer>
+                <p>Copyright &copy; Glynnis Thomas, 2017
+                <span><a href="mailto:glynnisthomas@gmail.com" alt="Email me at glynnisthomas@gmail.com">Contact Me</a></span></p>
+            </footer>
+        </div>
+    </body>
+
+
+</html>
